2010-07-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide/RootWorkspace.cs:
	* MonoDevelop.Ide/ProjectOperations.cs: Changed document
	  parsing/text file provider now returns texteditordata
	  provider.

2010-07-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs: Be more carefully when
	  updating parsed documents.

2010-07-20  Levi Bard  <levi@unity3d.com>

	* MonoDevelop.Ide.CodeCompletion/CompletionListWindow.cs:
	  Ensure that results are displayed once they come in for
	  mutable completion lists.

2010-07-19  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.ProgressMonitoring/BaseProgressMonitor.cs:
	  Better fix for Bug 617276 - MonoDevelop crashes when
	  clicking on a script error in Unity3d.

2010-07-19  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide/Ide.cs:
	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide/RootWorkspace.cs:
	* MonoDevelop.Ide/DesktopService.cs:
	* MonoDevelop.Ide.Desktop/RecentItem.cs:
	* MonoDevelop.Ide.Desktop/RecentOpen.cs:
	* MonoDevelop.Ide.Commands/FileCommands.cs:
	* MonoDevelop.Ide.Desktop/PlatformService.cs:
	* MonoDevelop.Ide.Desktop/RecentFileStorage.cs: Moved recent
	  files/projects lists to the desktopservice/platformservice
	  so it can be made platform-dependent.

2010-07-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Tasks/CommentTasksView.cs: Track API
	  changes.

2010-07-18  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/TextEditor.cs:
	* MonoDevelop.Ide.FindInFiles/Scope.cs:
	* MonoDevelop.Ide.Commands/EditCommands.cs:
	* MonoDevelop.Ide.Commands/ViewCommands.cs:
	* MonoDevelop.Ide.Tasks/CommentTasksView.cs:
	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs:
	* MonoDevelop.Ide.FindInFiles/FileProvider.cs: