@@ -1,3 +1,9 @@
+2010-07-22  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Ide.Gui/Document.cs: Use the parser service
+	  parser queue to update parse documents (=> fewer threads &
+	  fixes a possible dead lock)
+
 2010-07-21  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Ide.Gui/Document.cs:
